Fix application of dark mode, tests

--- a/src-ui/src/theme.scss
+++ b/src-ui/src/theme.scss
@@ -137,7 +137,6 @@ $form-check-radio-checked-bg-image-dark: url("data:image/svg+xml,<svg xmlns='htt
   }
 
   .card {
-    --bs-border-color-translucent: 0, 0, 0, .175;
     background-color: var(--bs-body-bg);
 
     .card-header {
